updated to Java to 17, lombok to 1.18.24, and disabled buildSearchableOptions